# homproj

./: .gitignore  LICENSE  README.md  pyproject.toml  simple_example.ipynb
camassa_holm_example/: ch_example.ipynb  chutils.py
double_pendulum_example/: double_pendulum_gravity_figs.ipynb  double_pendulum_spring_figs.ipynb  dputils.py  sputils.py
double_pendulum_example/verify_diffeos/: double_pend_triangular_map_sympy.ipynb  spring_pendulum_triangular_map_sympy.ipynb
homproj/: __init__.py  adaptive.py  dynamics.py  homproj.py  linhomproj.py  numeric.py  proj.py
kdv_example/: kdv_figures.ipynb  kdvutils.py
kepler_example/: kepler_figs.ipynb  kepler_figs_comparison.ipynb  keplerutils.py
